--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,28 @@
 # Basic Information 
-title: Yaoyao Liu
-position: Postdoctoral Fellow
-affiliation: Johns Hopkins University
-affiliation_link: https://cs.jhu.edu/
-affiliation_logo: ./assets/img/university-logo-small-horizontal-white-156eae9527.svg
-email: yyliu (at) cs.jhu.edu
-email2: yliu538 (at) jhu.edu
-
-# Search Engine Optimization (SEO)
-keywords: yaoyao liu, liu yaoyao, yaoyaoliu, liuyaoyao
-canonical: https://www.cs.jhu.edu/~yyliu/
-description: Yaoyao Liu is a postdoctoral fellow at Johns Hopkins University. His research lies in meta-learning, incremental learning, and image generation.
+title: Tianyu Xiong
+position: Ph.D. Student
+affiliation: The Ohio State University
+email: xiong.336 (at) osu (dot) edu
+keywords: minimal academic
+# google_scholar: https://scholar.google.com/
+description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
+canonical: https://xtyinzz.github.io/
+remote_theme: yaoyao-liu/minimal-light
 
 # The option is used to enable the Johns Hopkins template.
-enable_hopkins_logo: true
+enable_hopkins_logo: false
 
 # The option is used to show the last update time.
 enable_last_update: false
 
 # Links
 link_type: icon #text/icon
-google_scholar: https://scholar.google.com/citations?user=Uf9GqRsAAAAJ
-github_link: https://github.com/yaoyao-liu/
-linkedin: https://www.linkedin.com/in/liuyaoyao/
-twitter: https://twitter.com/YaoyaoLiu1/
+google_scholar: https://scholar.google.com/citations?user=tTNyrosAAAAJ&hl=en
+github_link: https://github.com/xtyinzz
+linkedin: https://www.linkedin.com/in/tianyu-xiong-b485bb154/
 
 # Images 
-avatar: https://img.yliu.me/avatar.jpg
+avatar: ./assets/img/dc_2022xmas.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
@@ -37,7 +33,6 @@ footnote_link: https://github.com/yaoyao-liu/minimal-light
 # Analytics
 # Please remove the following lines about analytics services if you fork my project. 
 # Otherwise, the analytics information of your website will be recorded to my ClustrMaps accounts.
-clustrmaps_id: CJD8XwsJhSyQ6sbsU-Gw0cNcUlbah7KW3xvHN2QlwW0
 
 # The following files will be removed from the generated website.
 exclude:
