--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ link_type: icon #text/icon
 google_scholar: https://scholar.google.com/citations?user=tTNyrosAAAAJ&hl=en
 github_link: https://github.com/xtyinzz
 linkedin: https://www.linkedin.com/in/tianyu-xiong-b485bb154/
+cv_link: ./assets/cv/2025_09_17.pdf
 
 # Images 
 avatar: ./assets/img/dc_2022xmas.jpg
