--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Tianyu Xiong
-position: Ph.D. Student
+position: Ph.D. Candidate
 affiliation: The Ohio State University
 email: xiong.336 (at) osu (dot) edu
 keywords: minimal academic
@@ -20,7 +20,7 @@ link_type: icon #text/icon
 google_scholar: https://scholar.google.com/citations?user=tTNyrosAAAAJ&hl=en
 github_link: https://github.com/xtyinzz
 linkedin: https://www.linkedin.com/in/tianyu-xiong-b485bb154/
-cv_link: ./assets/cv/2025_09_17.pdf
+cv_link: ./assets/cv/cv.pdf
 
 # Images 
 avatar: ./assets/img/dc_2022xmas.jpg
