--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ linkedin: https://www.linkedin.com/in/tianyu-xiong-b485bb154/
 cv_link: ./assets/cv/cv.pdf
 
 # Images 
-avatar: ./assets/img/dc_2022xmas.jpg
+avatar: ./assets/img/2022xmas_dc.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
